--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Untitled</title>
+  <title>Inspirational Quotes</title>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
