--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE hangutml>
+<html ng-app="myApp" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Inspirational Quotes</title>
   <link rel="stylesheet" type="text/css" href="main.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
 </head>
-<body>
+<body class="background-style" ng-controller="mainController">
+	<form>
+		<input>
+
+	</form> 
 	
 	<script src="main.js"></script>
 
