--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE hangutml>
+<!DOCTYPE html>
 <html ng-app="myApp" lang="en">
 <head>
   <meta charset="utf-8">
@@ -7,12 +7,40 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
 </head>
 <body class="background-style" ng-controller="mainController">
-	<form>
-		<input>
+	<header><h1>Let Me Quote That</h1></header>
+	<button ng-click="addQuote()">Add Quote</button>
+	<button ng-click="theRating('rating')">Sort by Rating</button> 
+	<div ng-hide="showQuotes">
 
-	</form> 
+		<form>
+			<textarea ng-model="quotes.text" name="quote" placeholder="Enter Quote"></textarea><br>
+			<input ng-model="quotes.author" name="author" placeholder="Enter Author">
+			<button ng-click="add()">Add</button> 
+
+		</form> 
+	</div>
+
+	<div>
+		<ul>
+			<li ng-repeat="list in temp">{{list.text}}<br>
+				<b>{{list.author}}</b><br>
+				<div>
+					<select name="rating" ng-model="list.rating">
+						<option value=""></option>
+						<option value="1">1</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5</option>
+					</select>
+			</li>
+
+		</ul>
+
+	</div>
 	
-	<script src="main.js"></script>
 
+
+	<script src="main.js"></script>
 </body>
 </html>
